fix: add safari support for index.js - flex gap not supported

--- a/styles/index.css
+++ b/styles/index.css
@@ -32,4 +32,13 @@
   .error {
     @apply font-lato text-xs text-red-600;
   }
+
+  .filter-main {
+    @apply bg-arrowDown mb-2 flex h-14 w-[90vw] appearance-none items-center justify-start rounded-lg border
+    bg-white bg-no-repeat pl-3  pr-7 drop-shadow-sm [background-position:97%] md:w-[29.3vw] lg:w-[28.8vw] xl:w-[22.9vw] 2xl:w-[18.4vw];
+  }
+
+  .filter-minor {
+    @apply flex h-10 appearance-none items-center justify-start rounded-full border bg-white text-sm drop-shadow-sm;
+  }
 }
